# simd_utils_bench

./:  CMakeLists.txt  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  benchmarks.cpp  compile_options.cmake  detect_platform.cmake
cmake/Modules/: FindAVX.cmake
